--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@netlify/functions": "^0.9.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,10 +16,16 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "dev": "npm-run-all --parallel dev:**",
+    "dev:app": "react-scripts start",
+    "dev:server": "netlify-lambda serve functions -c ./webpack.config.js",
+
+    "build": "npm-run-all --parallel build:**",
+    "build:app": "react-scripts build",
+    "build:functions": "netlify-lambda build functions -c ./webpack.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +48,16 @@
   "devDependencies": {
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "netlify-lambda": "^2.0.15",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.43.4"
+  },
+  "proxy": {
+    "/.netlify/functions": {
+      "target": "http://localhost:9000",
+      "pathRewrite": {
+        "^/\\.netlify/functions": ""
+      }
+    }
   }
 }
