--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv-webpack": "^7.0.3",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,14 +19,12 @@
   "scripts": {
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "dev": "npm-run-all --parallel dev:**",
     "dev:app": "react-scripts start",
-    "dev:server": "netlify-lambda serve functions -c ./webpack.config.js",
-
+    "dev:functions": "netlify-lambda serve src/functions --config ./webpack.functions.js",
     "build": "npm-run-all --parallel build:**",
     "build:app": "react-scripts build",
-    "build:functions": "netlify-lambda build functions -c ./webpack.config.js"
+    "build:functions": "netlify-lambda build src/functions"
   },
   "eslintConfig": {
     "extends": [
@@ -46,18 +45,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/aws-lambda": "^8.10.85",
+    "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "netlify-lambda": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "sass": "^1.43.4"
-  },
-  "proxy": {
-    "/.netlify/functions": {
-      "target": "http://localhost:9000",
-      "pathRewrite": {
-        "^/\\.netlify/functions": ""
-      }
-    }
   }
 }
