--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "dotenv-webpack": "^7.0.3",
+    "encoding": "^0.1.13",
     "faunadb": "^4.4.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
