--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "encoding": "^0.1.13",
     "faunadb": "^4.4.1",
     "formik": "^2.2.9",
+    "nanoid": "^3.1.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
