--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.6",
+    "swr": "^1.0.1",
     "yup": "^0.32.11"
   },
   "scripts": {
