--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "clipboard": "^2.0.8",
     "dotenv-webpack": "^7.0.3",
     "encoding": "^0.1.13",
     "faunadb": "^4.4.1",
