--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "clipboard": "^2.0.8",
     "dotenv-webpack": "^7.0.3",
     "encoding": "^0.1.13",
     "faunadb": "^4.4.1",
     "formik": "^2.2.9",
     "nanoid": "^3.1.30",
     "react": "^17.0.2",
+    "react-clipboard.js": "^2.0.16",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
