--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   command = "npm run build"
   functions = "lambda" #  where to build functions to
   publish = "build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
