--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "netlify-lambda": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "sass": "^1.43.4"
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
